--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="MonAn.cs" />
     <Compile Include="NhanVien.cs" />
     <Compile Include="ThanhVien.cs" />
     <Page Include="MainWindow.xaml">
