--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -56,6 +56,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="NhanVien.cs" />
+    <Compile Include="NhanVienQuanLy.cs" />
     <Compile Include="ThanhVien.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
