--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -60,6 +60,7 @@
     <Compile Include="NhanVien.cs" />
     <Compile Include="NhanVienQuanLy.cs" />
     <Compile Include="ThanhVien.cs" />
+    <Compile Include="ThongTinDonHang.cs" />
     <Compile Include="ThongTinThanhToan.cs" />
     <Compile Include="ThongTinTien.cs" />
     <Page Include="MainWindow.xaml">
