--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -61,6 +61,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="CapNhatThucDon.xaml.cs">
+      <DependentUpon>CapNhatThucDon.xaml</DependentUpon>
+    </Compile>
     <Compile Include="CapNhatTrangThai.xaml.cs">
       <DependentUpon>CapNhatTrangThai.xaml</DependentUpon>
     </Compile>
@@ -73,12 +76,22 @@
     <Compile Include="HuyDon.xaml.cs">
       <DependentUpon>HuyDon.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ThemMonAnMoi.xaml.cs">
+      <DependentUpon>ThemMonAnMoi.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ThucDon.xaml.cs">
       <DependentUpon>ThucDon.xaml</DependentUpon>
     </Compile>
     <Compile Include="TinhTien.xaml.cs">
       <DependentUpon>TinhTien.xaml</DependentUpon>
     </Compile>
+    <Compile Include="XacNhanCapNhatThucDon.xaml.cs">
+      <DependentUpon>XacNhanCapNhatThucDon.xaml</DependentUpon>
+    </Compile>
+    <Page Include="CapNhatThucDon.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="CapNhatTrangThai.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -114,11 +127,19 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="ThemMonAnMoi.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ThucDon.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="TinhTien.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="XacNhanCapNhatThucDon.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
